--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         cordapp project(':workflows')
     }
     node {
-        name "O=Notary,L=London,C=GB"
+        name "O=Notary,L=Bangkok,C=US"
         notary = [validating : false]
         p2pPort 10002
         rpcSettings {
@@ -110,7 +110,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         }
     }
     node {
-        name "O=PartyA,L=London,C=GB"
+        name "O=MFEC,L=Bangkok,C=US"
         p2pPort 10005
         rpcSettings {
             address("localhost:10006")
@@ -119,7 +119,7 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
         rpcUsers = [[ user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
     node {
-        name "O=PartyB,L=New York,C=US"
+        name "O=BangmodHospital,L=Bangkok,C=US"
         p2pPort 10008
         rpcSettings {
             address("localhost:10009")
